@@ -71,8 +71,10 @@ extern toggle toggles[TOGGLE_LEN];
 
 /* Programs we want available */
 
+char *revstrstr(char *haystack, char *needle, char *rev_start);
 char *strcasestr(char *haystack, char *needle);
-char *strstrwrapper(char *haystack, char *needle);
+char *revstrcasestr(char *haystack, char *needle, char *rev_start);
+char *strstrwrapper(char *haystack, char *needle, char *rev_start);
 int search_init(int replacing);
 int renumber(filestruct * fileptr);
 int free_filestruct(filestruct * src);
